# netonomy

./: .gitignore  README.md  db.sql  docker-compose.yml
electron-app/: .env  components.json  package-lock.json  package.json  tailwind.config.js  tsconfig.json
electron-app/src/main/: index.ts
electron-app/src/preload/: index.d.ts  index.ts
electron-app/src/renderer/: index.html
local-assistant/: .gitignore  assistant.py  audio_chat.py  audio_to_text.py  chat_completion.py  completion.py  requirements.txt  run_llama_server.py  server.py  text_to_speech.py
local-llm-binaries/OpenHermes-2.5-Mistral-7B-q4f16_1/: OpenHermes-2.5-Mistral-7B-q4f16_1-webgpu.wasm
local-llm-binaries/OpenHermes-2.5-Mistral-7B-q4f16_1/params/: mlc-chat-config.json  ndarray-cache.json
mobile-rn/: package-lock.json  package.json
netonomy-core/: Cargo.toml
netonomy-core/src/: main.rs
server/: .env  .gitignore  Dockerfile  package-lock.json  package.json  tsconfig.json
server/app/: createExpressApp.ts
server/app/config/: chomaClient.ts  openai.ts  vectorStore.ts
server/app/middleware/: auth.middleware.ts
tauri-app/: .dockerignore  .env.production  Dockerfile  bun.lockb  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
tauri-app/src/: App.tsx  globals.css  main.tsx
tauri-app/src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
tauri-app/src-tauri/icons/: icon.icns
tauri-app/src-tauri/src/: main.rs
tauri-app/src/components/: Header.tsx  MyRingLoader.tsx  NavBar.tsx  NavBarItem.tsx  PageContainer.tsx  ProfileImgSelector.tsx  ShareButtonPopover.tsx  ThemeProvider.tsx  TopLoader.tsx
tauri-app/src/enums/: NavBarOption.ts  NavBarOptions.ts
tauri-app/src/hooks/: useIsTauriApp.ts
tauri-app/src/lib/: utils.ts
tauri-app/src/pages/: CreateProfilePage.tsx  FileViewerPage.tsx  HomePage.tsx  ImageViewerPage.tsx  MessagesPage.tsx  NoteEditorPage.tsx  PdfViewerPage.tsx  ProfilePage.tsx  SplashPage.tsx  VideoViewerPage.tsx
tauri-app/src/stores/: useAppStore.ts  useChatStore.ts  useCollectionStore.ts  useFileStorageStore.ts  useProfileStore.ts  useWeb5Store.ts
tauri-app/src/types/: MyFile.ts  Profile.ts
terminal/: output.sh  yo.py
web-frontend/: Dockerfile  components.json  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
web-frontend/src/: App.tsx  Providers.tsx  Web5Provider.tsx  main.tsx
web-frontend/src/components/: BannerImgSelector.tsx  Chat.tsx  ConnectionsDialog.tsx  CreateFolderDialog.tsx  DingsDialog.tsx  FileIcon.tsx  (+6 more)
(+124 files in other folders)
